--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test-development",
+  "name": "@sty6x/image-slider",
   "version": "1.0.0",
-  "description": "Repository for testing out different functionalities, css animations, and other stuff for testing",
-  "private": true,
+  "description": "First Image Slider",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "webpack --watch",
@@ -22,13 +22,11 @@
   "homepage": "https://github.com/Sty6x/test-development#readme",
   "devDependencies": {
     "css-loader": "^6.7.1",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
-  },
-  "dependencies": {
-    "@sty6x/rudder-nav": "^1.0.2"
   }
 }
