--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Sty6x/test-development.git"
+    "url": "git+https://github.com/Sty6x/image-slider.git"
   },
   "keywords": [],
   "author": "",
